# opla

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  README.md
backend/: Dockerfile  conftest.py  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  bot_urls.py  email_service.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  (+4 more)
backend/apps/ai/: admin.py  apps.py  models.py  parameter_analyzer.py  questionnaire.py  serializers.py  services.py  urls.py  views.py
backend/apps/blog/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/cases/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/content/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/: admin.py  api_urls.py  exceptions.py  models.py  views.py
backend/apps/dashboard/: urls.py  views.py
backend/apps/delivery/: admin.py  models.py  tasks.py
backend/apps/industries/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/payments/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/reports/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/submissions/: admin.py  apps.py  group_invites.py  group_views.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/baqsy/: asgi.py  celery.py  urls.py  wsgi.py
backend/baqsy/settings/: base.py  dev.py  prod.py  test.py
backend/templates/admin/: index.html
backend/templates/pdf/: audit_report.html  styles.css
backend/tests/: factories.py  test_backup.py  test_pdf_fonts.py  test_seed.py  test_settings.py
bot/: Dockerfile  config.py  main.py  pyproject.toml
bot/handlers/: commands.py  onboarding.py  questionnaire.py  start.py
bot/keyboards/: industry.py
bot/services/: api_client.py
bot/states/: onboarding.py  questionnaire.py
(+215 files in other folders)
