[tool.poetry]
name = "baqsy-bot"
version = "0.1.0"
description = "Baqsy Telegram bot (aiogram 3 thin client)"
authors = ["Baqsy Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.27.0"
redis = "5.3.0"
httpx = "0.27.0"
python-decouple = "^3.8"
structlog = "25.5.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
